--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -36,13 +36,9 @@
     @include vf-button-pattern (
       $button-disabled-border-color: $color-mid,
       $button-border-color: $color-mid,
-      $button-hover-background-color: darken($color-x-light, 10%),
+      $button-hover-background-color: darken($color-x-light , 10%),
       $button-hover-border-color: $color-mid,
-<<<<<<< HEAD
-      $button-active-background-color: darken($color-x-light, 15%),
-=======
       $button-active-background-color: darken($color-x-light , 15%),
->>>>>>> ea0aa891393a44a3e18b8748b3f0f07588990082
       $button-active-border-color: $color-mid
     );
   }
@@ -126,7 +122,7 @@
       $button-background-color: $color-transparent,
       $button-border-color: $color-transparent,
       $button-text-color: $color-link,
-      $button-hover-background-color: darken($color-x-light, 10%),
+      $button-hover-background-color: $color-light,
       $button-hover-border-color: $color-transparent,
       $button-active-background-color: darken($color-light, 15%),
       $button-active-border-color: $color-transparent
