--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -29,3 +29,12 @@ $shelves-column-name: $grid-col-name;
     padding: $spv-inner--small $sph-inner--small;
   }
 }
+
+@mixin vf-p-css-grid {
+  .css-row {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 12;
+    grid-gap: 3rem;
+  }
+}
