# This is a combination of 2 commits. # This is the 1st commit message:
set up comparison between current and new grid

static gutter; per-breakpoint column count vars

css version of grid; update examples to compare between old / new

fix lint error

rename var

updatec demo to comparte gutters before/after on mobile

define gutter width per breakpoint

css grid work in progress

prefix wip (query not working yet)

add order to allow swapping column order

fix conditional media query generation

remove redundant example

simplify column ordering example

remove flex from vertically-center utility

 rename mobile/tablet classes to small/medium

rename device classes to small/medium

patterns: convert .prefix-* to .col-start-large-*

v-center utility: change display property from flex to grid

empty-column example: rename prefix to col-start-

Clean up example

precisely center divider pattern vertical line in middle of gutter

correct grid column switching to currently used breakpoints

4 > 2 space indentation

remove old grid, fix breakpoints, rename vars from device names to small/medium/large

examples fixes

place row rules into a placeholder so references to @include row can be changed to @extend row

update examples

update examples to resolve feedbback

improve grid examples

sync breakpoints in divider pattern to gird breakpoints

remove redundant col classes

make row-reset extendable by
patterns; use global grid switch vars to ensure patterns switch at same breakpoints

fix patterns

fix: vertically centered items no longer span full width of parent

fix travis errors

equal heights is redundant on in the contexrt aof a grid layout (cols already equal). I've removed the grid to display the behavior on stock p-cards

remove unnecesary div

lighten bullet color

replace placeholders with mixins

remove unnecesary utility

remove extra line to fix visual diff

remove strip from grid example

rm unnecesaery class

fix vertical spacing example

make row inside 

--- a/docs/examples/templates/typographic-spacing.html
+++ b/docs/examples/templates/typographic-spacing.html
@@ -1321,7 +1321,7 @@ category: _templates
       <button>Contact us</button>
       <p><a href="/ai/contact-us?product=ai-features">Contact us for machine learning, deep learning and AI consulting&nbsp;›</a></p>
     </div>
-    <div class="col-3 prefix-1 u-vertically-center u-align--center u-hide--small">
+    <div class="col-3 u-vertically-center u-align--center u-hide--small">
       <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="Kubeflow">
     </div>
   </div>
@@ -1335,7 +1335,7 @@ category: _templates
       <p>The standard for enterprise machine learning, from Silicon Valley to Wall Street, for the Fortune 50 and for startups.</p>
       <button>Contact us</button>
     </div>
-    <div class="col-3 prefix-1 u-vertically-center u-align--center u-hide--small">
+    <div class="col-3 u-vertically-center u-align--center u-hide--small">
       <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="Kubeflow">
     </div>
   </div>
@@ -1350,7 +1350,7 @@ category: _templates
       <p>The standard for enterprise machine learning, from Silicon Valley to Wall Street, for the Fortune 50 and for startups.</p>
       <button>Contact us</button>
     </div>
-    <div class="col-3 prefix-1 u-vertically-center u-align--center u-hide--small">
+    <div class="col-3 u-vertically-center u-align--center u-hide--small">
       <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="Kubeflow">
     </div>
   </div>
@@ -1365,7 +1365,7 @@ category: _templates
       <p>The standard for enterprise machine learning, from Silicon Valley to Wall Street, for the Fortune 50 and for startups.</p>
       <button>Contact us</button>
     </div>
-    <div class="col-3 prefix-1 u-vertically-center u-align--center u-hide--small">
+    <div class="col-3 u-vertically-center u-align--center u-hide--small">
       <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="Kubeflow">
     </div>
   </div>
@@ -1380,7 +1380,7 @@ category: _templates
       <p>The standard for enterprise machine learning, from Silicon Valley to Wall Street, for the Fortune 50 and for startups.</p>
       <button>Contact us</button>
     </div>
-    <div class="col-3 prefix-1 u-vertically-center u-align--center u-hide--small">
+    <div class="col-3 u-vertically-center u-align--center u-hide--small">
       <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="Kubeflow">
     </div>
   </div>
