--- a/scss/_utilities_equal-height.scss
+++ b/scss/_utilities_equal-height.scss
@@ -6,6 +6,10 @@
   .u-equal-height {
     @media only screen and (min-width: $breakpoint-medium) {
       display: flex;
+
+      &.row {
+        display: grid;
+      }
     }
   }
 }
