--- a/scss/_utilities_vertically-center.scss
+++ b/scss/_utilities_vertically-center.scss
@@ -4,7 +4,8 @@
 @mixin vf-u-vertically-center {
   .u-vertically-center {
     align-items: center !important;
-    display: flex !important;
+    display: grid;
+    justify-content: flex-start;
 
     > img {
       align-self: center !important;
