--- a/docs/examples/templates/maas-layout.html
+++ b/docs/examples/templates/maas-layout.html
@@ -20,31 +20,19 @@ category: _templates
       </span>
       <ul class="p-navigation__links" role="menu">
         <li class="p-navigation__link is-selected" role="menuitem">
-          <a href="#">Machines</a>
-        </li>
-        <li class="p-navigation__link" role="menuitem">
-          <a href="#">Devices</a>
-        </li>
-        <li class="p-navigation__link" role="menuitem">
-          <a href="#">Pods</a>
-        </li>
-        <li class="p-navigation__link" role="menuitem">
-          <a href="#">AZs</a>
-        </li>
-        <li class="p-navigation__link" role="menuitem">
-          <a href="#">Switches</a>
-        </li>
-        <li class="p-navigation__link" role="menuitem">
-          <a href="#">Subnets</a>
-        </li>
-        <li class="p-navigation__link" role="menuitem">
-          <a href="#">DNS</a>
+          <a href="#">Hardware</a>
         </li>
         <li class="p-navigation__link" role="menuitem">
           <a href="#">Images</a>
         </li>
         <li class="p-navigation__link" role="menuitem">
-          <a href="#">Controllers</a>
+          <a href="#">DNS</a>
+        </li>
+        <li class="p-navigation__link" role="menuitem">
+          <a href="#">AZs</a>
+        </li>
+        <li class="p-navigation__link" role="menuitem">
+          <a href="#">Subnets</a>
         </li>
         <li class="p-navigation__link" role="menuitem">
           <a href="#">Settings</a>
