--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -5,7 +5,7 @@
   table {
     border: 0;
     border-collapse: collapse;
-    margin-bottom: $spv-outer--scaleable;
+    padding-bottom: $spv-outer--scaleable;
     overflow-x: auto;
     table-layout: fixed;
     width: 100%;
