--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -1,7 +1,27 @@
 // Global grid settings
-$grid-margin-width: $sph-outer--large !default;
 $grid-columns: 12 !default;
+$grid-columns-small: 4 !default;
+$grid-columns-medium: 6 !default;
+$threshold-4-6-col: $breakpoint-small;
+$threshold-6-12-col: $breakpoint-medium;
+
 $grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
-$grid-gutter-width: 100% / ($grid-columns * $grid-gutter-column-ratio + ($grid-columns - 1)) !default; // gutter expressed as percentage of full width
+$grid-column-prefix: 'col-';
+$grid-small-col-prefix: '#{$grid-column-prefix}small-';
+$grid-col-medium-prefix: '#{$grid-column-prefix}medium-';
+$grid-desktop-col-prefix: #{$grid-column-prefix};
+
+$grid-gutter-widths: (
+  small: $sp-unit * 3,
+  medium: $sp-unit * 4,
+  large: $sp-unit * 5
+);
+
+$grid-margin-widths: (
+  small: $sp-unit * 2,
+  medium: $sp-unit * 3,
+  large: $sp-unit * 3
+);
+
+$grid-margin-width: $sph-outer--large !default;
 $grid-max-width: 72rem !default;
-$grid-col-name: 'col' !default;
