--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -1,7 +1,9 @@
 // Global grid settings
-$grid-margin-width: $sph-outer--large !default;
-$grid-columns: 12 !default;
-$grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
-$grid-gutter-width: 100% / ($grid-columns * $grid-gutter-column-ratio + ($grid-columns - 1)) !default; // gutter expressed as percentage of full width
-$grid-max-width: 72rem !default;
 $grid-col-name: 'col' !default;
+$grid-columns: 12 !default;
+$grid-columns-mobile: 4 !default;
+$grid-columns-tablet: 6 !default;
+$grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
+$grid-gutter-width: 1.5rem !default; // gutter expressed as percentage of full width
+$grid-margin-width: $sph-outer--large !default;
+$grid-max-width: 72rem !default;
