--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -29,7 +29,7 @@
   thead {
     th {
       @extend %muted-heading;
-      line-height: map-get($line-heights, table-headers);
+      line-height: map-get($line-heights, small);
     }
 
     tr {
