fix selectors in matrix

--- a/scss/_patterns_matrix.scss
+++ b/scss/_patterns_matrix.scss
@@ -105,10 +105,17 @@
       @extend %vf-heading-4;
     }
 
+    > p:last-child {
+      margin-bottom: $spv-nudge-compensation;
+    }
+
     &__desc {
-      > p:last-child,
       &:last-child {
         @extend %sp--hp;
+        margin-bottom: $spv-nudge-compensation;
+      }
+
+      > p:last-child {
         margin-bottom: $spv-nudge-compensation;
       }
 
