--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -75,7 +75,7 @@
 
   %vf-heading-5 {
     @include p-max-width;
-    font-size: $font-base-size;
+    font-size: 1em;
     font-style: normal;
     font-weight: 500;
     line-height: map-get($line-heights, default-text);
@@ -86,7 +86,7 @@
 
   %vf-heading-6 {
     @include p-max-width;
-    font-size: $font-base-size;
+    font-size: 1em;
     font-style: italic;
     font-weight: 300;
     line-height: map-get($line-heights, default-text);
