--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -1,7 +1,11 @@
 // Global font settings
 $font-base-family: '"Ubuntu", -apple-system, "Segoe UI", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif' !default;
 $font-monospace: '"Ubuntu Mono", Consolas, Monaco, Courier, monospace' !default;
-$font-base-size: 16px !default;
 $font-heading-family: $font-base-family !default;
 $font-import: 'http://fonts.gstatic.com/s/ubuntu/v9/' !default;
 $font-allow-cyrillic-greek-latin: false !default;
+
+$fontsizes: (
+  base: 16px,
+  big: 1.25rem
+) !default;
