--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -150,8 +150,8 @@
     & [class*='p-icon'] {
       // Apply negative margins to make textless button icon a square
       &:only-child {
-        margin-left: -($px * 2);
-        margin-right: -($px * 2);
+        margin-left: -2px;
+        margin-right: -2px;
       }
 
       + * {
