--- a/examples/templates/typographic-spacing.html
+++ b/examples/templates/typographic-spacing.html
@@ -245,7 +245,57 @@ category: _templates
 </div>
 
 <!-- / -->
-
+<div class="flex-container">
+  <div class="flex-col">
+    <input type="radio" name="" id="Radio1">
+    <label for="Radio1">radio</label>
+  </div>
+  <div class="flex-col">
+    <select name="exampleSelect" id="exampleSelect">
+      <option value="" disabled="disabled" selected="">Select</option>
+      <option value="1">Option 1</option>
+      <option value="2">Option 2</option>
+      <option value="3">Option 3</option>
+    </select>
+  </div>
+  <div class="flex-col">
+    <textarea id="textarea" rows="3">Textarea</textarea>
+  </div>
+  <div class="flex-col">
+    <label for="exampleInputEmail1">Email address</label>
+  </div>
+  <div class="flex-col">
+    <input type="text" id="exampleInputEmail1" placeholder="Email">
+  </div>
+  <div class="flex-col">
+    <button>Button</button>
+  </div>
+  <div class="flex-col">
+    <p class="p-muted-heading">muted</p>
+  </div>
+  <div class="flex-col">
+    <p>para</p>
+  </div>
+  <div class="flex-col">
+    <h5>h5</h5>
+  </div>
+  <div class="flex-col">
+    <h6>h6</h6>
+  </div>
+  <div class="flex-col">
+    <h4>h4</h4>
+  </div>
+  <div class="flex-col">
+    <h3>h3</h3>
+  </div>
+  <div class="flex-col">
+    <h2>h2</h2>
+  </div>
+  <div class="flex-col">
+    <h1>h1</h1>
+  </div>
+</div>
+<hr>
 <!-- h1 -->
 <div class="flex-container">
   <div class="flex-col">
@@ -1258,49 +1308,6 @@ category: _templates
     <p class="p-muted-heading">Muted heading</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id venenatis turpis, ac tincidunt neque. Vestibulum dapibus sollicitudin tortor vel lacinia. Etiam et purus eu mi vehicula rhoncus non sit amet justo. Vestibulum quam elit, rhoncus a dolor ac, scelerisque aliquam tellus. Donec eget nisl odio. Suspendisse feugiat erat et.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id venenatis turpis, ac tincidunt neque. Vestibulum dapibus sollicitudin tortor vel lacinia. Etiam et purus eu mi vehicula rhoncus non sit amet justo. Vestibulum quam elit, rhoncus a dolor ac, scelerisque aliquam tellus. Donec eget nisl odio. Suspendisse feugiat erat et.</p>
-  </div>
-</div>
-
-<div class="row" style="max-width: 100%">
-  <p>Eyebrow utility</p>
-</div>
-<div class="row" style="max-width: 100%">
-  <hr>
-</div>
-<div class="row" style="max-width: 100%">
-  <div class="col-2">
-    <p>An eyebrow</p>
-    <h1 class="has-eyebrow">Head one</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id venenatis turpis, ac tincidunt neque.</p>
-  </div>
-  <div class="col-2">
-    <p>An eyebrow</p>
-    <h2 class="has-eyebrow">Heading two</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id venenatis turpis, ac tincidunt neque.</p>
-  </div>
-  <div class="col-2">
-    <p>An eyebrow</p>
-    <h3 class="has-eyebrow">Heading three</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id venenatis turpis, ac tincidunt neque.</p>
-  </div>
-  <div class="col-2">
-    <p>An eyebrow</p>
-    <h4 class="has-eyebrow">Heading four</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id venenatis turpis, ac tincidunt neque.</p>
-  </div>
-  <div class="col-2">
-    <p>An eyebrow</p>
-    <h5 class="has-eyebrow">Heading five</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id venenatis turpis, ac tincidunt neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id venenatis turpis, ac tincidunt neque.</p>
-  </div>
-  <div class="col-2">
-    <p>An eyebrow</p>
-    <h6 class="has-eyebrow">Heading six</h6>
-  </div>
-  <div class="col-2">
-    <p>An eyebrow</p>
-    <p class="has-eyebrow p-muted-heading">Muted heading</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id venenatis turpis, ac tincidunt neque.</p>
   </div>
 </div>
 
