replace $px (1px expresed as rem) with calc(...) as the value of rem changes with the font size bump

--- a/scss/_patterns_card.scss
+++ b/scss/_patterns_card.scss
@@ -13,7 +13,7 @@
     @extend %vf-card;
     @extend %vf-is-bordered;
     @extend %vf-has-round-corners;
-    padding: $spv-intra--regular - $px;
+    padding: calc(#{$spv-intra--regular} - 1px);
   }
 }
 
