--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -49,7 +49,7 @@
 
   //accordion, table
   %single-border-text-vpadding--scaling {
-    padding-bottom: $spv-intra--condensed--scaleable - $px;
+    padding-bottom: calc(#{$spv-intra--condensed--scaleable} - 1px);
     padding-top: $spv-intra--condensed--scaleable;
   }
 }
