--- a/scss/_patterns_code-copyable.scss
+++ b/scss/_patterns_code-copyable.scss
@@ -1,7 +1,7 @@
 @import 'settings';
 @import 'patterns_icons';
 
-$cc-button-size: 36 * $px;
+$cc-button-size: 36px;
 
 @mixin vf-p-code-copyable {
   .p-code-copyable {
@@ -22,7 +22,7 @@ $cc-button-size: 36 * $px;
       color: $color-mid-dark;
       font-family: unquote($font-monospace);
       line-height: map-get($line-heights, default-text);
-      padding: 0 $cc-button-size + $sph-intra--condensed 0 $sph-intra * 1.5;
+      padding: 0 calc(#{$cc-button-size} + #{$sph-intra--condensed}) 0 $sph-intra * 1.5;
       width: 100%;
     }
 
@@ -32,7 +32,7 @@ $cc-button-size: 36 * $px;
       display: block;
       left: 0;
       line-height: map-get($line-heights, default-text);
-      padding: 0 $cc-button-size + $sph-intra--condensed 0 $sph-intra--condensed;
+      padding: 0 calc(#{$cc-button-size} + #{$sph-intra--condensed}) 0 $sph-intra--condensed;
       position: absolute;
       top: $spv-intra--condensed;
       width: 1rem;
