--- a/scss/_patterns_divider.scss
+++ b/scss/_patterns_divider.scss
@@ -12,7 +12,7 @@
 
         &:not(:first-child) {
           border-top: 1px solid $color-mid-light;
-          padding-top: $spv-intra--scaleable - $px; // border compensation
+          padding-top: calc(#{$spv-intra--scaleable} - 1px); // border compensation
         }
       }
 
