--- a/scss/_patterns_matrix.scss
+++ b/scss/_patterns_matrix.scss
@@ -18,7 +18,7 @@
       display: flex;
       flex: 1 1 auto;
       padding-bottom: $spv-intra--scaleable;
-      padding-top: $spv-intra--scaleable - $px;
+      padding-top: calc(#{$spv-intra--scaleable} - 1px);
 
       @media (min-width: $breakpoint-small) {
         display: flex;
