--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -150,7 +150,7 @@
       padding-top: map-get($nudges, nudge--h3) + map-get($sp-before, h3);
     }
 
-    @media (max-width: $breakpoint-heading-threshold) {
+    @media (min-width: $breakpoint-heading-threshold) {
       padding-top: map-get($nudges, nudge--h3-mobile) + map-get($sp-before, h3-mobile);
     }
   }
