--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -4,7 +4,7 @@ $font-monospace: '"Ubuntu Mono", Consolas, Monaco, Courier, monospace' !default;
 $font-heading-family: $font-base-family !default;
 $font-import: 'http://fonts.gstatic.com/s/ubuntu/v9/' !default;
 $font-allow-cyrillic-greek-latin: false !default;
-
+$increase-fontsize-on-bigger-screens: true;
 $fontsizes: (
   base: 16px,
   big: 1.25rem
