--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -137,7 +137,7 @@
 @mixin vf-button-inline {
   [class~='p-button'].is-inline {
     @media (min-width: $breakpoint-medium) {
-      margin-left: $sph-inter;
+      margin-left: $sph-outer;
       width: auto;
     }
   }
