Update sph-inner--condensed to --small

--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -155,7 +155,7 @@
       }
 
       + * {
-        margin-left: $sph-inner--condensed / 2;
+        margin-left: $sph-inner--small / 2;
       }
     }
   }
