change font-size declaration to px

--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -7,5 +7,5 @@ $font-allow-cyrillic-greek-latin: false !default;
 $increase-fontsize-on-bigger-screens: true;
 $fontsizes: (
   base: 16px,
-  big: 1.25rem
+  big: 20px
 ) !default;
