--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -26,9 +26,10 @@ $line-heights: (
 $nudges: (
   nudge--h1: 0.2rem,
   nudge--h2: 0.2rem,
+  nudge--h2-largescreen: 0.35rem,
   nudge--h3: 0.1rem,
   nudge--h4: 0.05rem,
-  nudge--h1-mobile: 0.2rem,
+  nudge--h1-mobile: 0.165rem,
   nudge--h2-mobile: 0.1rem,
   nudge--h3-mobile: 0.5rem,
   nudge--h4-mobile: 0.3rem,
