--- a/_jekyll/_layouts/default.html
+++ b/_jekyll/_layouts/default.html
@@ -12,7 +12,7 @@
         {% endif %}
     </head>
 
-    <body style="margin: 1rem;">
+    <body style="margin: 1rem;" class="u-baseline-grid">
 
 {{ content }}
     </body>
