correct h3 mobile nudge to be at mobile breakpoint

--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -160,11 +160,11 @@
 
   %sp--ph3 {
     @media (max-width: $breakpoint-heading-threshold) {
-      padding-top: map-get($nudges, nudge--h3) + map-get($sp-before, h3);
+      padding-top: map-get($nudges, nudge--h3-mobile) + map-get($sp-before, h3);
     }
 
     @media (min-width: $breakpoint-heading-threshold) {
-      padding-top: map-get($nudges, nudge--h3-mobile) + map-get($sp-before, h3-mobile);
+      padding-top: map-get($nudges, nudge--h3) + map-get($sp-before, h3-mobile);
     }
   }
 
