revert muted heading change as not part of this scope

--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -131,7 +131,7 @@
     color: $color-mid-dark;
     margin-bottom: map-get($sp-after, small) - map-get($nudges, nudge--small);
     margin-top: 0;
-    padding-top: map-get($nudges, nudge--small) + $sp-unit; // add one baseline unit so muted headings sit on same baseline as paragraphs
+    padding-top: map-get($nudges, nudge--small);
     text-transform: uppercase;
   }
 
