--- a/scss/_base_typography.scss
+++ b/scss/_base_typography.scss
@@ -32,6 +32,8 @@
 
       @media screen and (min-width: $breakpoint-x-large) {
         font-size: map-get($fontsizes, big);
+        //the rem value is not affected by the change in font-size; it needs to be multiplied by the ratio new font-size/default font-size
+        line-height: map-get($line-heights, default-text) * $fontsize-ratio--largescreen;
       }
     } @else {
       font-size: map-get($fontsizes, base);
