--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -5,7 +5,9 @@ $font-heading-family: $font-base-family !default;
 $font-import: 'http://fonts.gstatic.com/s/ubuntu/v9/' !default;
 $font-allow-cyrillic-greek-latin: false !default;
 $increase-fontsize-on-bigger-screens: true;
+$fontsize-ratio--largescreen: 1.25;
+$fontsize-largescreen: 1rem * $fontsize-ratio--largescreen;
 $fontsizes: (
   base: 16px,
-  big: 20px
+  big: $fontsize-largescreen
 ) !default;
