--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -24,9 +24,10 @@ $line-heights: (
 
 // baseline nudges for type scale ratio of (16/14) squared
 $nudges: (
+  nudge--h1-large: 0.15rem,
+  nudge--h4-large: 0,
   nudge--h1: 0.2rem,
   nudge--h2: 0.2rem,
-  nudge--h2-largescreen: 0.15rem,
   nudge--h3: 0.1rem,
   nudge--h4: 0.05rem,
   nudge--h1-mobile: 0.165rem,
