--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -74,7 +74,7 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
     $box-size: 1rem;
     $box-offset-top: $spv-inner--x-small;
     $label-offset--left: $sph-inner + $box-size;
-    $tick-offset-top: calc(#{$box-offset-top} + 3px);
+    $tick-offset-top: calc(#{$box-offset-top} + 0.1875rem);
     opacity: 0;
     position: absolute;
 
@@ -223,11 +223,11 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
         border-bottom: 2px solid;
         border-left: 2px solid;
         color: $color-x-light;
-        height: 6px;
-        left: 3px;
+        height: 0.375rem;
+        left: 0.1875rem;
         top: $sp-unit;
         transform: rotate(-45deg);
-        width: 10px;
+        width: 0.625rem;
       }
     }
 
@@ -248,10 +248,10 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
       &::after {
         background-color: $color-information;
         border-radius: 50%;
-        height: 10px;
-        left: 3px;
-        top: 7px;
-        width: 10px;
+        height: 0.65rem;
+        left: 0.1875rem;
+        top: 0.4375rem;
+        width: 0.65rem;
       }
     }
   }
