restore typographic-spacing version from branch develop

--- a/examples/templates/typographic-spacing.html
+++ b/examples/templates/typographic-spacing.html
@@ -13,30 +13,36 @@ category: _templates
 <!-- h1+others -->
 <div class="flex-container">
   <div class="flex-col">
+    <h1>Canonical’s AI and ML solutions feature…</h1>
     <h1>Architectural freedom. Fully automated operations.</h1>
     <p>Canonical’s AI solutions such as <a href="/ai/install">Kubeflow</a> on Ubuntu give you the flexibility to place your AI, ML and DL services exactly where you want them while sharing operational code with a large community.</p>
   </div>
   <div class="flex-col">
+    <h1>Canonical’s AI and ML solutions feature…</h1>
     <h2>Architectural freedom. Fully automated operations.</h2>
     <p>Canonical’s AI solutions such as <a href="/ai/install">Kubeflow</a> on Ubuntu give you the flexibility to place your AI, ML and DL services exactly where you want them while sharing operational code with a large community.</p>
     <a href="#" class="p-button">Get started</a>
   </div>
   <div class="flex-col">
+    <h1>Canonical’s AI and ML solutions feature…</h1>
     <h3>Architectural freedom. Fully automated operations.</h3>
     <p>Canonical’s AI solutions such as <a href="/ai/install">Kubeflow</a> on Ubuntu give you the flexibility to place your AI, ML and DL services exactly where you want them while sharing operational code with a large community.</p>
     <button>Contact us</button>
   </div>
   <div class="flex-col">
+    <h1>Canonical’s AI and ML solutions feature…</h1>
     <h4>Architectural freedom. Fully automated operations.</h4>
     <p>Canonical’s AI solutions such as <a href="/ai/install">Kubeflow</a> on Ubuntu give you the flexibility to place your AI, ML and DL services exactly where you want them while sharing operational code with a large community.</p>
     <button>Contact us</button>
   </div>
   <div class="flex-col">
+    <h1>Canonical’s AI and ML solutions feature…</h1>
     <h5>Architectural freedom. Fully automated operations.</h5>
     <p>Canonical’s AI solutions such as <a href="/ai/install">Kubeflow</a> on Ubuntu give you the flexibility to place your AI, ML and DL services exactly where you want them while sharing operational code with a large community.</p>
     <button>Contact us</button>
   </div>
   <div class="flex-col">
+    <h1>Canonical’s AI and ML solutions feature…</h1>
     <h6>Architectural freedom. Fully automated operations.</h6>
     <p>Canonical’s AI solutions such as <a href="/ai/install">Kubeflow</a> on Ubuntu give you the flexibility to place your AI, ML and DL services exactly where you want them while sharing operational code with a large community.</p>
     <button>Contact us</button>
