--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -24,13 +24,15 @@ $line-heights: (
 
 // baseline nudges for type scale ratio of (16/14) squared
 $nudges: (
+  nudge--h1-large: 0.15rem,
+  nudge--h4-large: 0,
   nudge--h1: 0.2rem,
   nudge--h2: 0.2rem,
   nudge--h3: 0.1rem,
   nudge--h4: 0.05rem,
-  nudge--h1-mobile: 0.2rem,
+  nudge--h1-mobile: 0.165rem,
   nudge--h2-mobile: 0.1rem,
-  nudge--h3-mobile: 0.5rem,
+  nudge--h3-mobile: 0,
   nudge--h4-mobile: 0.3rem,
   nudge--p: 0.4rem,
   nudge--small: 0.2rem
@@ -101,7 +103,7 @@ $sp-after: (
   h1-mobile: $sp-unit * 2,
   h2-mobile: $sp-unit * 2,
   h3-mobile: $sp-unit * 2,
-  h4-mobile: $sp-unit * 2,
+  h4-mobile: $sp-unit * 3,
   small: $sp-unit * 2,
   small--dense: $sp-unit * 2,
   default-text: $sp-unit
