make font-size value optional

--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -4,8 +4,8 @@ $font-monospace: '"Ubuntu Mono", Consolas, Monaco, Courier, monospace' !default;
 $font-heading-family: $font-base-family !default;
 $font-import: 'http://fonts.gstatic.com/s/ubuntu/v9/' !default;
 $font-allow-cyrillic-greek-latin: false !default;
-$increase-fontsize-on-bigger-screens: true;
-$fontsize-ratio--largescreen: 1.125;
+$increase-fontsize-on-bigger-screens: true !default;
+$fontsize-ratio--largescreen: 1.125 !default;
 $fontsize-largescreen: 1rem * $fontsize-ratio--largescreen;
 $fontsizes: (
   base: 16px,
