fix accordion plus to be perfectly in the midle of the row

--- a/scss/_patterns_accordion.scss
+++ b/scss/_patterns_accordion.scss
@@ -24,9 +24,8 @@
       @include vf-focus;
 
       $calculated-height: $multi * $spv-inner--x-small * 2 + map-get($line-heights, default-text);
-      $offset-top: calc(#{($calculated-height - $icon-size) * 0.5} - 1px);
       background: {
-        position: top $offset-top right $sph-inner;
+        position: top 50% right $sph-inner;
         repeat: no-repeat;
       }
       background-color: inherit;
