fix units and queries to address feedback

--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -17,9 +17,6 @@
     @media (min-width: $breakpoint-heading-threshold) {
       font-size: pow($ms-ratio, 8) * 1rem;
       line-height: map-get($line-heights, h1);
-    }
-
-    @media (min-width: $breakpoint-heading-threshold) {
       margin-bottom: map-get($sp-after, h1) - map-get($nudges, nudge--h1);
       padding-top: map-get($nudges, nudge--h1);
     }
@@ -87,9 +84,6 @@
     @media (min-width: $breakpoint-heading-threshold) {
       font-size: pow($ms-ratio, 2) * 1rem;
       line-height: map-get($line-heights, h4);
-    }
-
-    @media (min-width: $breakpoint-heading-threshold) {
       margin-bottom: map-get($sp-after, h4) - map-get($nudges, nudge--h4);
       padding-top: map-get($nudges, nudge--h4);
     }
@@ -104,7 +98,7 @@
 
   %vf-heading-5 {
     @include p-max-width;
-    font-size: 1em;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 500;
     line-height: map-get($line-heights, default-text);
@@ -115,7 +109,7 @@
 
   %vf-heading-6 {
     @include p-max-width;
-    font-size: 1em;
+    font-size: 1rem;
     font-style: italic;
     font-weight: 300;
     line-height: map-get($line-heights, default-text);
