--- a/docs/sass/styles.scss
+++ b/docs/sass/styles.scss
@@ -28,7 +28,6 @@ hr {
 
 /* Sidebar navigation */
 .p-sidebar-nav {
-
   &__list {
     @extend .p-list;
     margin-bottom: $spv-intra;
@@ -38,15 +37,15 @@ hr {
   &__item {
     padding-bottom: $spv-intra--condensed / 2;
     padding-top: $spv-intra--condensed / 2;
-  
+
     &:first-of-type {
       padding-top: $spv-intra;
     }
-  
+
     &:last-of-type {
       padding-bottom: $spv-intra + $spv-intra--condensed;
     }
-  
+
     .is-active {
       position: relative;
 
@@ -199,7 +198,7 @@ hr.is-deep {
 
 .p-list__icon--slack {
   @extend %list__icon;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24' width='24'%3E%3Cg fill-rule='evenodd' fill='none'%3E%3Ccircle cy='12' cx='12' r='12' fill='%23E01A59'/%3E%3Cg fill-rule='nonzero' fill='%23fff'%3E%3Cpath d='M14.42 4.738a1.49 1.49 0 0 0-1.862-.952 1.49 1.49 0 0 0-.952 1.863l3.821 11.75a1.476 1.476 0 0 0 1.795.911c.79-.23 1.265-1.06 1.006-1.823 0-.027-3.808-11.749-3.808-11.749zM8.505 6.655a1.49 1.49 0 0 0-1.863-.952 1.49 1.49 0 0 0-.952 1.864l3.821 11.75a1.474 1.474 0 0 0 1.795.91c.79-.23 1.265-1.06 1.007-1.821 0-.027-3.808-11.75-3.808-11.75z'/%3E%3Cpath d='M19.235 14.461a1.49 1.49 0 0 0 .951-1.863 1.49 1.49 0 0 0-1.863-.952L6.56 15.482a1.474 1.474 0 0 0-.91 1.795c.23.79 1.06 1.265 1.821 1.007.028 0 11.764-3.822 11.764-3.822z'/%3E%3Cpath d='M9.008 17.793c.762-.245 1.755-.57 2.815-.91-.245-.763-.57-1.755-.91-2.816l-2.816.911.911 2.815zM14.937 15.862c1.061-.34 2.054-.667 2.815-.91-.245-.763-.57-1.755-.91-2.816l-2.816.911.911 2.815zM17.303 8.546a1.49 1.49 0 0 0 .952-1.863 1.49 1.49 0 0 0-1.863-.952L4.642 9.552a1.475 1.475 0 0 0-.91 1.795c.23.789 1.06 1.265 1.822 1.007.027 0 11.75-3.808 11.75-3.808z'/%3E%3Cpath d='M7.09 11.864c.762-.245 1.755-.571 2.816-.911-.34-1.06-.667-2.054-.911-2.815l-2.815.911.91 2.815zM13.006 9.947c1.061-.34 2.054-.667 2.815-.912-.34-1.06-.666-2.053-.91-2.815l-2.816.911.911 2.816z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='124' height='124' viewBox='0 0 124 124'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='%23E01E5A' d='M26.4 13.2C26.4 20.3 20.6 26.1 13.5 26.1 6.4 26.1.6 20.3.6 13.2.6 6.1 6.4.3 13.5.3L26.4.3 26.4 13.2zM32.9 13.2C32.9 6.1 38.7.3 45.8.3 52.9.3 58.7 6.1 58.7 13.2L58.7 45.5C58.7 52.6 52.9 58.4 45.8 58.4 38.7 58.4 32.9 52.6 32.9 45.5L32.9 13.2z' transform='translate(0 65)'/%3E%3Cpath fill='%2336C5F0' d='M45.8 26.4C38.7 26.4 32.9 20.6 32.9 13.5 32.9 6.4 38.7.6 45.8.6 52.9.6 58.7 6.4 58.7 13.5L58.7 26.4 45.8 26.4zM45.8 32.9C52.9 32.9 58.7 38.7 58.7 45.8 58.7 52.9 52.9 58.7 45.8 58.7L13.5 58.7C6.4 58.7.6 52.9.6 45.8.6 38.7 6.4 32.9 13.5 32.9L45.8 32.9z'/%3E%3Cpath fill='%232EB67D' d='M32.6 45.8C32.6 38.7 38.4 32.9 45.5 32.9 52.6 32.9 58.4 38.7 58.4 45.8 58.4 52.9 52.6 58.7 45.5 58.7L32.6 58.7 32.6 45.8zM26.1 45.8C26.1 52.9 20.3 58.7 13.2 58.7 6.1 58.7.3 52.9.3 45.8L.3 13.5C.3 6.4 6.1.6 13.2.6 20.3.6 26.1 6.4 26.1 13.5L26.1 45.8z' transform='translate(65)'/%3E%3Cpath fill='%23ECB22E' d='M13.2 32.6C20.3 32.6 26.1 38.4 26.1 45.5 26.1 52.6 20.3 58.4 13.2 58.4 6.1 58.4.3 52.6.3 45.5L.3 32.6 13.2 32.6zM13.2 26.1C6.1 26.1.3 20.3.3 13.2.3 6.1 6.1.3 13.2.3L45.5.3C52.6.3 58.4 6.1 58.4 13.2 58.4 20.3 52.6 26.1 45.5 26.1L13.2 26.1z' transform='translate(65 65)'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 .p-list__item--deep {
