move fontsize increase to a resolution percy can render (1280px)

--- a/scss/_settings_breakpoints.scss
+++ b/scss/_settings_breakpoints.scss
@@ -5,4 +5,4 @@ $breakpoint-medium: 772px !default;
 $breakpoint-large: 1036px !default;
 $breakpoint-navigation-threshold: $breakpoint-medium !default;
 $breakpoint-heading-threshold: $breakpoint-medium !default;
-$breakpoint-x-large: 1440px; //speculative threshold between laptops and desktop screens that sit further away from the viewer; used to increase root font size
+$breakpoint-x-large: 1280px !default;
