remove display:inline (default is alredy inline); align to baseline grid

--- a/scss/_base_code.scss
+++ b/scss/_base_code.scss
@@ -26,10 +26,6 @@
     // sass-lint:enable no-vendor-prefixes property-sort-order
   }
 
-  code {
-    display: inline;
-  }
-
   pre {
     background-color: $color-light;
     border: 1px solid $color-mid-light;
@@ -39,7 +35,7 @@
     margin-bottom: $spv-outer--scaleable;
     margin-top: 0;
     overflow: auto;
-    padding: $spv-inner--small $sph-inner;
+    padding: calc(#{map-get($nudges, nudge--p-ubuntumono)} - 1px) $sph-inner calc(#{map-get($nudges, nudge--p-ubuntumono)} - 1px);
     text-align: left;
     text-shadow: none;
   }
