--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -33,7 +33,7 @@ $shelves-column-name: $grid-col-name;
 @mixin vf-p-css-grid {
   [css-grid-demo] [class*='css-col-'] {
     background: $color-mid-light;
-    margin-bottom: $spv-intra;
+    margin-bottom: $spv-inner--small;
   }
 
   .css-row {
