--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -4,6 +4,14 @@ $grid-columns: 12 !default;
 $grid-columns-mobile: 4 !default;
 $grid-columns-tablet: 6 !default;
 $grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
-$grid-gutter-width: 1.5rem !default; // gutter expressed as percentage of full width
+
+//kept for comparison
+$grid-gutter-width: 100% / ($grid-columns * $grid-gutter-column-ratio + ($grid-columns - 1)) !default; // gutter expressed as percentage of full width
+$grid-gutter-widths: (
+  small: $sp-unit * 4,
+  medium: $sp-unit * 4,
+  large: $sp-unit * 5
+);
+
 $grid-margin-width: $sph-outer--large !default;
 $grid-max-width: 72rem !default;
