--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -1,14 +1,19 @@
 // Global grid settings
-$grid-col-name: 'col' !default;
+$grid-col-name: 'column' !default;
+$shelves-row-name: 'shelves-row' !default;
+
 $grid-columns: 12 !default;
 $grid-columns-mobile: 4 !default;
 $grid-columns-tablet: 6 !default;
 $grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
+$grid-mobile-col-prefix: 'mobile-col-';
+$grid-tablet-col-prefix: 'tablet-col-';
+$grid-desktop-col-prefix: 'col-';
 
 //kept for comparison
 $grid-gutter-width: 100% / ($grid-columns * $grid-gutter-column-ratio + ($grid-columns - 1)) !default; // gutter expressed as percentage of full width
 $grid-gutter-widths: (
-  small: $sp-unit * 4,
+  small: $sp-unit * 3,
   medium: $sp-unit * 4,
   large: $sp-unit * 5
 );
