--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -6,9 +6,10 @@ $grid-columns: 12 !default;
 $grid-columns-mobile: 4 !default;
 $grid-columns-tablet: 6 !default;
 $grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
-$grid-mobile-col-prefix: 'small-col-';
-$grid-tablet-col-prefix: 'medium-col-';
-$grid-desktop-col-prefix: 'col-';
+$grid-column-prefix: 'col-';
+$grid-small-col-prefix: '#{$grid-column-prefix}small-';
+$grid-col-medium-prefix: '#{$grid-column-prefix}medium-';
+$grid-desktop-col-prefix: #{$grid-column-prefix};
 
 //kept for comparison
 $grid-gutter-width: 100% / ($grid-columns * $grid-gutter-column-ratio + ($grid-columns - 1)) !default; // gutter expressed as percentage of full width
