v-center utility: change display property from flex to grid

--- a/scss/_utilities_vertically-center.scss
+++ b/scss/_utilities_vertically-center.scss
@@ -4,6 +4,7 @@
 @mixin vf-u-vertically-center {
   .u-vertically-center {
     align-items: center !important;
+    display: grid;
 
     > img {
       align-self: center !important;
