Update examples listing markup

--- a/_jekyll/_layouts/default.html
+++ b/_jekyll/_layouts/default.html
@@ -12,7 +12,7 @@
         {% endif %}
     </head>
 
-    <body style="margin: 1rem;">
+    <body {% if page.url != '/' %}style="margin: 1rem;"{% endif %}>
 
 {{ content }}
     </body>
