remove old grid, fix breakpoints, rename vars from device names to small/medium/large

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -225,12 +225,12 @@ $spv-list-item--inner: 0.25 * $spv-outer--small-scaleable; // padding top and bo
         margin: 0;
 
         > :nth-child(2n) {
-          @include column(6, $grid-columns);
+          grid-column-end: span 6;
           position: static;
         }
 
         > :nth-child(2n + 1) {
-          @include column(6, $grid-columns, true);
+          grid-column-end: span 6;
           position: static;
         }
       }
