--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -1,32 +1,8 @@
 @import 'settings';
 
-// This file imports Shelves Grid framework
-// http://shelvesgrid.org/
-// The settings below can be changed in _settings_grid.scss
-$shelves-max-width: $grid-max-width;
-$shelves-columns: $grid-columns;
-$shelves-margin: $grid-margin-width;
-$shelves-gutter: $grid-gutter-width;
-$shelves-tablet-breakpoint: $breakpoint-medium;
-$shelves-mobile-breakpoint: $breakpoint-small;
-$shelves-column-name: $grid-col-name;
-
-@import 'grid/shelves-grid';
-
 @mixin vf-p-grid-modifications {
   .row {
     width: 100%;
-  }
-
-  // Demo helper
-  [grid-demo] [class*='#{$grid-col-name}-'] {
-    background: $color-mid-light;
-    margin-bottom: $spv-inner--small;
-  }
-
-  [grid-outline] [class*='#{$grid-col-name}-'] {
-    outline: 1px solid $color-x-light;
-    padding: $spv-inner--small $sph-inner--small;
   }
 }
 
@@ -40,14 +16,14 @@ $shelves-column-name: $grid-col-name;
   }
 
   %span-full-grid-on-mobile {
-    @media (max-width: $breakpoint-medium) {
-      grid-column: 1 / span $grid-columns-mobile;
+    @media (max-width: $breakpoint-large) {
+      grid-column: 1 / span $grid-columns-small;
     }
   }
 
   %span-full-grid-on-tablet {
-    @media (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
-      grid-column: 1 / span $grid-columns-tablet;
+    @media (min-width: $breakpoint-large) and (max-width: $breakpoint-large) {
+      grid-column: 1 / span $grid-columns-medium;
     }
   }
 
@@ -57,7 +33,7 @@ $shelves-column-name: $grid-col-name;
     }
   }
 
-  [css-grid-demo] [class*='#{$grid-column-prefix}'] {
+  .grid-demo [class*='#{$grid-column-prefix}'] {
     background: transparentize($color-negative, 0.9);
     margin-bottom: $spv-outer--small;
   }
@@ -80,25 +56,25 @@ $shelves-column-name: $grid-col-name;
     }
 
     // set static gutter width per breakpoint
-    @media (max-width: $breakpoint-small) {
+    @media (max-width: $breakpoint-medium) {
       grid-gap: 0 map-get($grid-gutter-widths, small);
-      grid-template-columns: repeat($grid-columns-mobile, minmax(0, 1fr));
+      grid-template-columns: repeat($grid-columns-small, minmax(0, 1fr));
 
       * {
-        grid-column-end: span $grid-columns-mobile;
+        grid-column-end: span $grid-columns-small;
       }
     }
 
-    @media (min-width: $breakpoint-small) and (max-width: $breakpoint-medium) {
+    @media (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
       grid-gap: 0 map-get($grid-gutter-widths, medium);
-      grid-template-columns: repeat($grid-columns-tablet, minmax(0, 1fr));
+      grid-template-columns: repeat($grid-columns-medium, minmax(0, 1fr));
 
       * {
-        grid-column-end: span $grid-columns-tablet;
+        grid-column-end: span $grid-columns-medium;
       }
     }
 
-    @media (min-width: $breakpoint-medium) {
+    @media (min-width: $breakpoint-large) {
       grid-gap: 0 map-get($grid-gutter-widths, large);
       grid-template-columns: repeat($grid-columns, minmax(0, 1fr));
 
@@ -109,8 +85,8 @@ $shelves-column-name: $grid-col-name;
   }
 
   // mobile grid
-  @media (max-width: $breakpoint-small) {
-    @for $i from 1 through $grid-columns-mobile {
+  @media (max-width: $breakpoint-medium) {
+    @for $i from 1 through $grid-columns-small {
       .#{$grid-small-col-prefix}#{$i} {
         grid-column-end: span #{$i};
 
@@ -125,8 +101,8 @@ $shelves-column-name: $grid-col-name;
   }
 
   // tablet grid
-  @media (min-width: $breakpoint-small) and (max-width: $breakpoint-medium) {
-    @for $i from 1 through $grid-columns-tablet {
+  @media (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
+    @for $i from 1 through $grid-columns-medium {
       .#{$grid-col-medium-prefix}#{$i} {
         grid-column-end: span #{$i};
 
@@ -141,7 +117,7 @@ $shelves-column-name: $grid-col-name;
   }
 
   // desktop grid
-  @media (min-width: $breakpoint-medium) {
+  @media (min-width: $breakpoint-large) {
     @for $i from $grid-columns through 1 {
       // set col-* to span respective number of columns on desktop
       .#{$grid-desktop-col-prefix}#{$i} {
@@ -158,14 +134,14 @@ $shelves-column-name: $grid-col-name;
   }
 
   // span full grid on other breakpoints; (to match block level element behaviour)
-  @for $i from 1 through $grid-columns-mobile {
+  @for $i from 1 through $grid-columns-small {
     .#{$grid-small-col-prefix}#{$i} {
       @extend %span-full-grid-on-tablet;
       @extend %span-full-grid-on-desktop;
     }
   }
 
-  @for $i from 1 through $grid-columns-tablet {
+  @for $i from 1 through $grid-columns-medium {
     .#{$grid-col-medium-prefix}#{$i} {
       @extend %span-full-grid-on-mobile;
       @extend %span-full-grid-on-desktop;
@@ -181,9 +157,9 @@ $shelves-column-name: $grid-col-name;
 
   // column reordering
   $offsets: (
-    (small, 0, $breakpoint-small, $grid-columns-mobile - 1),
-    (medium, $breakpoint-small, $breakpoint-medium, $grid-columns-tablet - 1),
-    (large, $breakpoint-medium, -1, $grid-columns - 1)
+    (small, 0, $breakpoint-small, $grid-columns-small - 1),
+    (medium, $breakpoint-small, $breakpoint-large, $grid-columns-medium - 1),
+    (large, $breakpoint-large, -1, $grid-columns - 1)
   );
 
   @each $label, $breakpoint-min, $breakpoint-max, $col-count in $offsets {
