--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -3,8 +3,8 @@ $grid-col-name: 'column' !default;
 $shelves-row-name: 'shelves-row' !default;
 
 $grid-columns: 12 !default;
-$grid-columns-mobile: 4 !default;
-$grid-columns-tablet: 6 !default;
+$grid-columns-small: 4 !default;
+$grid-columns-medium: 6 !default;
 $grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
 $grid-column-prefix: 'col-';
 $grid-small-col-prefix: '#{$grid-column-prefix}small-';
