--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -1,18 +1,16 @@
 // Global grid settings
-$grid-col-name: 'column' !default;
-$shelves-row-name: 'shelves-row' !default;
-
 $grid-columns: 12 !default;
 $grid-columns-small: 4 !default;
 $grid-columns-medium: 6 !default;
+$threshold-4-6-col: $breakpoint-small;
+$threshold-6-12-col: $breakpoint-medium;
+
 $grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
 $grid-column-prefix: 'col-';
 $grid-small-col-prefix: '#{$grid-column-prefix}small-';
 $grid-col-medium-prefix: '#{$grid-column-prefix}medium-';
 $grid-desktop-col-prefix: #{$grid-column-prefix};
 
-//kept for comparison
-$grid-gutter-width: 100% / ($grid-columns * $grid-gutter-column-ratio + ($grid-columns - 1)) !default; // gutter expressed as percentage of full width
 $grid-gutter-widths: (
   small: $sp-unit * 3,
   medium: $sp-unit * 4,
